# book_server

./: .gitignore  Cargo.toml
.sqlx/: query-089f342678c7cd30d858fa0544dc256e3c3ef5b0b1ff7881c917fd1fdb0ea986.json  query-40477fa3292d05ac04d867189c5f0e29974aa8e44141a664b292cf84e1769da8.json  query-58dbde1885d4bf0c5874ed9543dda6c6bbb4df4306f1afe3e880a0de670d27dc.json  query-5ad1b106c83b6417c2be2135b76abe59c6f6e7f795dfd4133ba58cdc55898ebe.json  query-63461e4c79902d9654e0d15ec3729865e6bbfda501db09c8172982da884eb736.json  query-79d66d95ffde33f681f7cd94c5415abafd0c9b8e07ad89fa778def09b05b1303.json  query-998f2be39aa3e2db0384d5880dd5bd4a4211c9e0eddf3e146d184ed4a09cbd55.json  query-b00e92ac663d4095608fc04a2c6756a76cb979c5e2919e2ee9b26b91de3da661.json  query-b758df69773ac66268c75e58ca5db6ad1186e48e6e3ab1998f9bfcc02413bc77.json  query-b88a3791a116b3f017d29e65e9247886441260da5c72cc1008e7998ff2c35628.json  query-c6f718d28eb07d275e7130234d87cf731b547351c606e1279234085fc4e05bf3.json  query-e8ccd1e02f61706ca1722ec8e20b8463e91ee10f4de592dc885ac7b03898ad96.json
config/: config.yaml
migration/: 001_init.sql
src/: app_state.rs  main.rs  router.rs
src/controllers/: author.rs  author_controller.rs  book.rs  book_controller.rs  mod.rs  user.rs
src/db/: author_repo.rs  book_repo.rs  mod.rs  pool.rs
src/enums/: jwt.rs  mod.rs  role.rs
src/middleware/: casbin_middleware.rs  jwt_middleware.rs  mod.rs
src/models/: author.rs  book.rs  login.rs  mod.rs  token.rs  user.rs
src/pkg/: api_response.rs  config.rs  enforcer.rs  mariadb.rs  mod.rs
src/repo/: author.rs  mod.rs  user.rs
(+5 files in other folders)
