[package]
name = "rest"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tower-http = { version = "0.5", features = ["cors"] }

sqlx = { version = "0.7", features = ["runtime-tokio", "mysql", "runtime-tokio-rustls",  "macros", "bigdecimal" ] }
bigdecimal = "0.4"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"